Change-Id: I55794ea74d26100a3ffb440cd7b9aaf406b58966

--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,5 +1,5 @@
-#Tue Sep 06 14:46:31 EST 2011
+#Wed Sep 07 21:07:42 EST 2011
 eclipse.preferences.version=1
-include_path=0;/cc\u00055;org.zend.php.framework.CONTAINER\u00055;org.eclipse.dltk.USER_LIBRARY/ZF5
+include_path=0;/Hello\u00055;org.zend.php.framework.CONTAINER\u00055;org.eclipse.dltk.USER_LIBRARY/ZF5
 phpVersion=php5
 use_asp_tags_as_php=false
